public/assets/css/shop_style.css
/* <link href="https://fonts.googleapis.com/css?family=Eagle+Lake|Open+Sans:600|Pacifico|Roboto" rel="stylesheet">
font-family: 'Eagle Lake', cursive;
font-family: 'Roboto', sans-serif;
font-family: 'Open Sans', sans-serif;
font-family: 'Pacifico', cursive;*/

*{
	text-align: center;
}

body{
	background: rgba(217,244,241,1); /* For browsers that do not support gradients */
	background: -moz-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(217,244,241,1)), color-stop(8%, rgba(217,244,241,1)), color-stop(29%, rgba(217,244,241,1)), color-stop(71%, rgba(146,221,205,1)), color-stop(84%, rgba(146,221,205,1)), color-stop(100%, rgba(146,221,205,1)));
	background: -webkit-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
	background: -o-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
	background: -ms-linear-gradient(top, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
	background: linear-gradient(to bottom, rgba(217,244,241,1) 0%, rgba(217,244,241,1) 8%, rgba(217,244,241,1) 29%, rgba(146,221,205,1) 71%, rgba(146,221,205,1) 84%, rgba(146,221,205,1) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d9f4f1', endColorstr='#92ddcd', GradientType=0 );
	font-family: 'Open Sans', sans-serif;

}



/*img{
	max-width: 300px;
	max-height:300px;
}*/

.jumbotron {
	padding-top:10px;
	padding-bottom:10px;
	max-height: 240px;
	background-color:#83D8C5 !important;
}
/*.jumbotron p {
	margin:5px;
	font-size: 16px;
	font-weight:200;
	font-family: 'Open Sans', sans-serif;
}*/

h1{
	size:24px
	font-color: #1f9388;
	font-family: 'Pacifico', cursive;
	padding-bottom:10px;
	margin-top:5px !important;
	margin-bottom:18px !important;

}

h2{
	size:18px
	font-color: green;
	font-weight: bold;;
}

h3{
	size:24px
	font-color: #1f9388;
	font-family: 'Pacifico', cursive;
}

p{
	font-size: 14px;
}

/*li{
	color:black;
	background-color:#c7e5e2;
	border:15px;
	border-radius: 15px;
	width:500px;
	height:30px;
	margin-bottom:10px;
}*/
.custom_bullet li {
    display: block;
    text-align: left;
}

.custom_bullet li:before {
    /*Using a Bootstrap glyphicon as the bullet point*/
    content: "\f060";
    font-family: 'Glyphicons Halflings';
    font-size: 9px;
    float: left;
    margin-top: 4px;
    margin-left: -17px;
    color: #CCCCCC;
}
td{
	text-align:left;
}
.panel{
	padding-bottom:10px;
}
.panel-heading{
	background:#83D8C5 !important;
}
.well{
	background:#d9f4f1 !important;
}
 .instr{
 	background:#d9f4f1 !important;

 }
.fixed-panel {
  min-height: 10;
  max-height: 343;
  overflow-y: scroll;
}
/****** Entry (Input Area) Section ******/

.long_btn{
	width: 400px;
	height: 35px;
	color:black!important;
	font-size: 15px;
	font-style: bold;
	background-color: #d9f4f1;
    border: 4px turquoise;
}
.newBtn{
	width: auto;
	height: 35px;
	color:black!important;
	font-size: 15px;
	font-style: bold;
	background-color: lavendar;
    border: 4px turquoise;
}
.gotItBtn{

	font-style: bold;
/*    background-color: #48baac;
*/    background-color: #d5f4e6;
	  border: 4px turquoise;
	  display:inline-block;

}
.clearBtn{
	background-color: #eea29a;
	float:right;
}
.input-group{
	display:inline-table;
	vertical-align: middle;
}
.input-group-addon,
	.input-group-btn,
		.form-control{
			width:auto !important;
			height: :auto !important;
		
}

/*------------Dropdown stdItems------------*/
.dropbtn {
    background-color: #48baac;
    color: white;
    padding: 16px;
    font-size: 16px;
    border: none;
    cursor: pointer;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: #d9f4f1;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.dropdown-content a {
    color: black;
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}

.dropdown-content a:hover {background-color: #bcd3d1}

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown:hover .dropbtn {
    background-color: #368e83;
}

/****** Main Section Tables ******/

table {
    table-layout: fixed;
}

.table-fixed thead {d
  width: 97%;
}
.table-fixed tbody {
  height: 410px;
  overflow-y: auto;
  width: 100%;
}
.table-fixed thead, .table-fixed tbody, .table-fixed tr, .table-fixed td, .table-fixed th {
  display: block;
}
.table-fixed tbody td, .table-fixed thead > tr> th {
  float: left;
  border-bottom-width: 0;
}

/*Lines 130 to 147 are suggestions on controlling the table cell widths*/
/*.toBuy{
	table-layout: fixed;
	border-collapse: collapse;
}
*/
/*td:first-child{
	width:10%;
}
td:second-child{
	width:70%;
}
td:third-child{
	width:10%;
}
td:last-child{
	width:10%;
}*/
.footer{
	float: left;
	padding-top: 30px;
}

